--- a/public/index.html
+++ b/public/index.html
@@ -10,20 +10,29 @@
 </head>
 <body>
   <nav>
-    <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="/login">Login</a></li>
-      <li><a href="/signup">Signup</a></li>
-    </ul>
+    <div class="kepas-nav-items">
+      <ul>
+        <li><a href="/"><img src="./logo.png" alt="logo" width="150" class="logo"></a></li>
+      </ul>
+      <div class="search-field">
+        <form id="searchForm" hx-get="/search" hx-target="#searchResults" hx-trigger="keyup delay:200ms">
+          <!-- <button class="filter-btn">Location</button> -->
+        <input type="text" name="query" id="searchInput" placeholder="Search by name or location">
+        </form>
+      </div>
+      <ul>
+        <li class="post-your-skills-btn"><a href="#">Post Your Skills</a></li>
+        <li><a href="/login">Login</a></li>
+        <li><a href="/signup">Signup</a></li>
+      </ul>
+    </div>
   </nav>
-  <h1>Welcome to Plumbit</h1>
- <!-- Search Form -->
- <form id="searchForm" hx-get="/search" hx-target="#searchResults" hx-trigger="keyup delay:200ms">
-  <input type="text" name="query" id="searchInput" placeholder="Search by name or location">
-</form>
 
-<!-- Search Results -->
-<div id="searchResults" class="search-result" hx-swap="innerHTML" hx-get="/unknown" hx-target="#searchResults" hx-trigger="load"></div>
+  <div class="main">
+    <!-- Search Results -->
+    <div id="searchResults" class="search-result" hx-swap="innerHTML" hx-get="/unknown" hx-target="#searchResults" hx-trigger="load"></div>
+  </div>
+
   <script src="htmx.js"></script>
   <script src="https://unpkg.com/htmx.org@^1.5.0/dist/htmx.js"></script>
 
