--- a/public/signup.html
+++ b/public/signup.html
@@ -5,14 +5,36 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="htmx.js"></script>
   <title>Signup</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>SIGNUP</h1>
+  <nav>
+    <div class="kepas-nav-items">
+      <ul>
+        <li><a href="/"><img src="./logo.png" alt="logo" width="150" class="logo"></a></li>
+      </ul>
+      <div>
+        <form id="searchForm" hx-get="/search" hx-target="#searchResults" hx-trigger="keyup delay:200ms">
+        <input type="text" name="query" id="searchInput" placeholder="Search by name or location">
+        </form>
+      </div>
+      <ul>
+        <li><a href="/login">Login</a></li>
+        <li><a href="/signup">Signup</a></li>
+      </ul>
+    </div>
+  </nav>
+  <h1>Welcome to Plumbit</h1>
+  <h2>SIGNUP</h2>
   <form id="signupForm" hx-post="/signup">
     <input type="text" name="username" placeholder="Username" required><br>
+    <input type="tel" id="phone" name="phone" placeholder="Mobile Number" required><br>
     <input type="email" name="email" placeholder="Email" required><br>
     <input type="password" name="password" placeholder="Password" required><br>
-    <input type="text" name="location" id="locationInput" placeholder="Location" required><br>
+    <input type="text" name="country" placeholder="Country" required><br>
+    <input type="text" name="city" placeholder="City" required><br>
+    <input type="text" name="town" placeholder="Town" required><br>
+    <input  type="text" name="location" id="locationInput" required><br>
     <button type="submit">Signup</button>
   </form>
 
